complete user model
