# internal/api/user/routes.go
@@ -1,10 +1,19 @@
 package user
 
-import "github.com/gin-gonic/gin"
+import (
+	"github.com/gin-gonic/gin"
+	"ocserv/internal/providers/routes/middleware"
+)
 
 func Routes(router *gin.RouterGroup) {
 	user := NewUserController()
 	group := router.Group("/user")
 	group.POST("/", user.CreateAdminUser)
-	group.PATCH("/password/", user.UpdatePassword)
+	group.POST("/login/", user.Login)
+	group.POST("/password/", middleware.TokenMiddleware(), user.UpdatePassword)
+
+	staffGroup := group.Group("/staff", middleware.TokenMiddleware())
+	staffGroup.POST("/staffs/", user.CreateStaff)
+	staffGroup.POST("/staffs/:id/password/", user.UpdateStaffPassword)
+	staffGroup.DELETE("staffs/:id/", user.DeleteStaff)
 }
