# internal/api/user/types.go
@@ -9,3 +9,25 @@ type UpdateData struct {
 	CurrentPassword string `json:"current_password" binding:"required"`
 	NewPassword     string `json:"new_password" binding:"required"`
 }
+
+type CreateResponse struct {
+	ID       uint   `json:"id"`
+	Username string `json:"username" binding:"required"`
+	Admin    bool   `json:"admin"`
+}
+
+type CreateStaffData struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
+type CreateLoginData struct {
+	Username   string `json:"username" binding:"required"`
+	Password   string `json:"password" binding:"required"`
+	RememberMe bool   `json:"remember_me"`
+}
+
+type LoginResponse struct {
+	Token    string `json:"token"`
+	ExpireAt int64  `json:"expire_at"`
+}
